# slick

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  LICENSE  PRD.md  README.md  SECURITY.md  SKILL.md  config.py  db.py  docker-compose.yml  llms-full.txt  llms.txt  main.py  pyproject.toml
.well-known/: agent.json  quant-agent.json  sentinel-agent.json
agents/: orchestrator.py  quant.py  sentinel.py
docs/: handoff.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/layout/: Header.tsx
frontend/components/ui/: AgentStatusBadge.tsx  StatCard.tsx  TradeFeed.tsx
frontend/lib/: mockData.ts
